# RayTracer

./: .gitignore  CMakeLists.txt  Camera.h  IntersectTest.cpp  IntersectTests.h  Light.h  LightConstants.h  Matrix4.h  Matrix4Operations.h  PriorityQueue.h  README.md  Ray.h  RayTracer.cpp  RayTracer.sln  RayTracer.vcproj  RayTracer.vcxproj  RayTracer.vcxproj.filters  Shapes.h  main.cpp
Image/: Bitmap.cpp  Bitmap.h  bitmap.cpp  bitmap.h
Maths/: Vector.h
Shapes/: Plane.cpp  Plane.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/: Camera.cpp  Camera.h  PriorityQueue.h  RayTracer.cpp  main.cpp
src/Image/: Bitmap.cpp  Bitmap.h
src/Maths/: Matrix4.h  Matrix4Operations.h  Ray.h  Vector.cpp  Vector.h
src/Shapes/: Camera.h  Light.cpp  Light.h  LightConstants.h  Plane.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  World.cpp  World.h
